--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,23 @@
 @tailwind utilities;
 
 @layer base {
-    html {
-      font-family: "Handlee", cursive;
+  html {
+    font-family: "Handlee", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .container-toast-messages {
+    &.Toastify__toast-container--top-center {
+      width: 100%;
+      @screen sm {
+        width:320px;
+      }
+    }
+    .Toastify__toast-theme--colored.Toastify__toast--error {
+      background: #e56052d1;
+    }
+    .Toastify__toast-theme--colored.Toastify__toast--success {
+      background: #2ab32ead;
     }
   }
+}
