--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   html {
-    font-family: "Handlee", cursive;
+    font-family: "Handlee","EB Garamond", cursive;
     font-weight: 400;
     font-style: normal;
   }
